# Brep-Tools

./: .gitignore  CMakeLists.txt  README.md  Utils.cpp  Utils.h  bs.tcl  bs_curve.step  bs_curve_rational.step  bs_surf.step  d.tcl  main.cpp  stats_analyser.py  step_folder_stat.csv
step_files/: 3d printer.step  spoon.step
